# claude-code-design-implement

./: .gitignore  ai-pm-guide.html  index.html
.github/workflows/: deploy-pages.yml
chapters/: ch1.html  ch2.html  ch3.html  ch4.html  ch5.html  ch6.html  ch7.html  ch8.html  ch9.html  ref.html
code/: ch01_agent_loop.py  main.py  pyproject.toml
code/claude_code_arch/: __init__.py
code/claude_code_arch/loop/: __init__.py  agent_loop.py  tools.py
code/examples/: askuserquestion_demo.py  coordinator_demo.py  loop_demo.py  mailbox_demo.py  permissions_demo.py  session_demo.py  subagent_demo.py  tool_demo.py
