[project]
name = "claude-code-arch"
version = "0.1.0"
description = "Claude Code 架构设计与实现——配套代码"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.115.1",
]

[project.scripts]
loop-demo = "examples.loop_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_arch", "examples"]
